# GoogleTest_Practice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat  run.sh
include/: isprime.h  library.h  maxnumber.h  triangle.h
src/: CMakeLists.txt  isprime.cpp  library.cpp  math_utils.cpp  math_utils.h  maxnumber.cpp  triangle.cpp
tests/: CMakeLists.txt  test_base.h  test_isprime.cpp  test_library.cpp  test_math_utils.cpp  test_maxnumber.cpp  test_triangle.cpp
